fix css masthead and jump links

--- a/content/assets/css/main.less
+++ b/content/assets/css/main.less
@@ -65,7 +65,7 @@ margin-left: 100px;
 .jumptarget:before {
   content:"";
   display:block;
-  height:70px; /* fixed header height*/
+  height:90px; /* fixed header height*/
   margin:-70px 0 0; /* negative fixed header height */
 }
 
@@ -94,7 +94,7 @@ margin-left: 100px;
 .versiontext {
   color: @cbblue;
   font-weight: bold;
-  display: block;
+  display: inline;
   margin-top: 2px;
   margin-bottom: 2px;
   padding-top: 8px;
@@ -134,5 +134,14 @@ h1:hover, h2:hover, h3:hover, h4:hover {
 
 .version a {
     display: inline;
-    margin-top: -10px;
+    color: @cbblue;
+    font-weight: bold;
+    margin-top: 2px;
+    margin-bottom: 2px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-right: 12px;
+    padding-left: 12px;
+    margin-right: 2px;
+    line-height: 14px;
 }
